# cribbageAI

./: .gitignore  CMakeLists.txt  class_diagram.puml  experiments.cpp  experiments.h  main.cpp  todo.txt
GUI/: CMakeLists.txt  cribbage.cpp  interface.py  pyController.py  simulator.cpp  test.py
simulator/: CMakeLists.txt  abstraction.cpp  abstraction.h  action.cpp  action.h  card.cpp  card.h  cheatingutcplayer.cpp  cheatingutcplayer.h  cribbage.cpp  cribbage.h  deck.cpp  deck.h  globparameters.h  greedyplayer.cpp  greedyplayer.h  hand.cpp  hand.h  mccfrplayer.cpp  mccfrplayer.h  player.cpp  player.h  scorer.cpp  scorer.h  statistics.cpp  statistics.h  utils.cpp  utils.h
tests/: CMakeLists.txt  abstractiontest.cpp  cardtest.cpp  cheatingutcplayertest.cpp  cribbagetest.cpp  decktest.cpp  greedyplayertest.cpp  handtest.cpp  maintest.cpp  mccfrplayertest.cpp  metatest.cpp  playertest.cpp  scorertest.cpp  statisticstest.cpp  utils.cpp  utils.h  utilstest.cpp
wrappers/: CMakeLists.txt  bindings.cpp  controller.cpp  controller.h  controllerwrapper.cpp  controllerwrapper.h
